--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1-2/int05-1-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1-2/int05-1-1-2.component.html
@@ -11,18 +11,18 @@
                             <th rowspan="2">ลำดับ</th>
                             <th rowspan="2">ชนิดแสตมป์</th>
                             <th colspan="2">คงเหลือยกมาจากปีก่อน</th>
-                            <th colspan="2">ตุลาคม</th>
-                            <th colspan="2">พฤศจิกายน</th>
-                            <th colspan="2">ธันวาคม</th>
-                            <th colspan="2">มกราคม</th>
-                            <th colspan="2">กุมภาพันธ์</th>
-                            <th colspan="2">มีนาคม</th>
-                            <th colspan="2">เมษายน</th>
-                            <th colspan="2">พฤษภาคม</th>
-                            <th colspan="2">มิถุนายน</th>
-                            <th colspan="2">กรกฎาคม</th>
-                            <th colspan="2">สิงหาคม</th>
-                            <th colspan="2">กันยายน</th>
+                            <th colspan="3">ตุลาคม</th>
+                            <th colspan="3">พฤศจิกายน</th>
+                            <th colspan="3">ธันวาคม</th>
+                            <th colspan="3">มกราคม</th>
+                            <th colspan="3">กุมภาพันธ์</th>
+                            <th colspan="3">มีนาคม</th>
+                            <th colspan="3">เมษายน</th>
+                            <th colspan="3">พฤษภาคม</th>
+                            <th colspan="3">มิถุนายน</th>
+                            <th colspan="3">กรกฎาคม</th>
+                            <th colspan="3">สิงหาคม</th>
+                            <th colspan="3">กันยายน</th>
                             <th colspan="4">รวมรับ-จ่ายปีนี้ (ต.ค. - ก.ย.)</th>
                             <th colspan="4">รวมทั้งปีงบประมาณ</th>
                             <th colspan="2">คงเหลือ ณ ปัจจุบัน </th>
@@ -34,40 +34,51 @@
                             
                             <th>รับ (ดวง)</th>
                             <th>จ่าย (ดวง)</th>
+                            <th>คงเหลือ</th>
                             
                             <th>รับ (ดวง)</th>
                             <th>จ่าย (ดวง)</th>
+                            <th>คงเหลือ</th>
                             
                             <th>รับ (ดวง)</th>
                             <th>จ่าย (ดวง)</th>
+                            <th>คงเหลือ</th>
                             
                             <th>รับ (ดวง)</th>
                             <th>จ่าย (ดวง)</th>
+                            <th>คงเหลือ</th>
                             
                             <th>รับ (ดวง)</th>
                             <th>จ่าย (ดวง)</th>
+                            <th>คงเหลือ</th>
                             
                             <th>รับ (ดวง)</th>
                             <th>จ่าย (ดวง)</th>
+                            <th>คงเหลือ</th>
                             
                             <th>รับ (ดวง)</th>
                             <th>จ่าย (ดวง)</th>
+                            <th>คงเหลือ</th>
                             
                             <th>รับ (ดวง)</th>
                             <th>จ่าย (ดวง)</th>
+                            <th>คงเหลือ</th>
                             
                             <th>รับ (ดวง)</th>
                             <th>จ่าย (ดวง)</th>
+                            <th>คงเหลือ</th>
                             
                             <th>รับ (ดวง)</th>
                             <th>จ่าย (ดวง)</th>
+                            <th>คงเหลือ</th>
                             
                             <th>รับ (ดวง)</th>
                             <th>จ่าย (ดวง)</th>
+                            <th>คงเหลือ</th>
 
                             <th>รับ (ดวง)</th>
                             <th>จ่าย (ดวง)</th>
-                            
+                            <th>คงเหลือ</th>
                                                 
                             <th>รับ (ดวง)</th>
                             <th>ค่าพิมพ์แสตมป์ (บาท)</th>
