เพิ่ม ฟิลด์ ค้นหา หน้า เช็ค KTB

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1.component.html
@@ -91,7 +91,7 @@
     <thead>
       <tr>
         <th style="text-align: center !important" rowspan="2">ลำดับ</th>
-        <th style="text-align: center !important" rowspan="2">วันที่ การรับ-จ่าย</th>
+        <th style="text-align: center !important" rowspan="2">วันที่ การรับ-จ่าย-ส่งคืน</th>
         <th style="text-align: center !important" rowspan="2">สถานะ การรับ-จ่าย</th>
         <th style="text-align: center !important" rowspan="2">หน่วยงาน/ผู้ประกอบการที่รับ-จ่ายแสตมป์</th>
         <th style="text-align: center !important" colspan="2">หนังสือขอเบิกแสตมป์</th>
