--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
@@ -20,7 +20,8 @@
                 </div>
 
                 <div class="four wide field">
-                    <input type="text" id="firstNumber" (keyup)="onKeyUp($event, 'firstNumber')" placeholder="1,000,000,000" [attr.required]="true">
+                    <input type="text" id="firstNumber" (keyup)="onKeyUp($event, 'firstNumber')" placeholder="1,000,000,000"
+                        [attr.required]="true">
                 </div>
             </div>
 
@@ -34,8 +35,8 @@
                 </div>
 
                 <div class="four wide field ">
-                    <input type="text" placeholder="0" name="font{{i}}" id="font{{i}}" (keyup)="onKeyUp($event, 'font'+i)" [attr.required]="true"
-                        [(ngModel)]="font[i]" value="">
+                    <input type="text" placeholder="0" name="font{{i}}" id="font{{i}}" (keyup)="onKeyUp($event, 'font'+i)"
+                        [attr.required]="true" [(ngModel)]="font[i]" value="">
                 </div>
 
                 <div class="one wide field ">
@@ -43,8 +44,8 @@
                 </div>
 
                 <div class="four wide field ">
-                    <input type="text" name="back{{i}}" id="back{{i}}" (keyup)="onKeyUp($event, 'back'+i)" [attr.required]="true" [(ngModel)]="back[i]"
-                        value="">
+                    <input type="text" name="back{{i}}" id="back{{i}}" (keyup)="onKeyUp($event, 'back'+i)"
+                        [attr.required]="true" [(ngModel)]="back[i]" value="">
                 </div>
 
                 <div class="two wide field">
@@ -68,7 +69,8 @@
                 </div>
 
                 <div class="four wide field ">
-                    <input type="text" id="lastNumber" (keyup)="onKeyUp($event, 'lastNumber')" placeholder="10" [attr.required]="true" value="">
+                    <input type="text" id="lastNumber" (keyup)="onKeyUp($event, 'lastNumber')" placeholder="10"
+                        [attr.required]="true" value="">
                 </div>
             </div>
 
@@ -132,7 +134,8 @@
                             <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ถึง&nbsp;</label>
                         </div>
                         <div class="four ui action input">
-                            <input type="text" placeholder="MM/YYYY" value="{{last}}" class="custom-readonly" [readonly]="true">
+                            <input type="text" placeholder="MM/YYYY" value="{{last}}" class="custom-readonly"
+                                [readonly]="true">
 
                             <button class="ui icon button">
                                 <i class="add to calendar icon"></i>
@@ -180,25 +183,34 @@
             </div>
             <div class="ui attached segment">
                 <div class="ui grid">
-                    <div class="three wide column" style="padding-right: 0;">
-                        <div class="ui vertical menu" style="width: auto">
+                    <div id="divProduct" class="three wide column" style="padding-right: 0;">
+                        <i class="angle left icon" (click)="hideProductType()"></i>
+                        <i class="angle right icon" (click)="showProductType()"></i>
+                        <div id="productType" class="ui vertical menu" style="width: auto">
                             <div class="item">
                                 <div class="header">พิกัดสินค้า</div>
                                 <div class="menu">
-                                    <div class="item hover {{exciseProductType == item && 'active'}}" *ngFor="let item of listMenu" (click)="selectExciseProductType(item)">-
+                                    <div class="item hover {{exciseProductType == item && 'active'}}" *ngFor="let item of listMenu"
+                                        (click)="selectExciseProductType(item)">-
                                         {{item}}
                                     </div>
                                 </div>
                                 <div class="header">พิกัดบริการ</div>
                                 <div class="menu">
-                                    <div class="item hover {{exciseProductType == item && 'active'}}" *ngFor="let item of listMenu1" (click)="selectExciseProductType(item)">-
+                                    <div class="item hover {{exciseProductType == item && 'active'}}" *ngFor="let item of listMenu1"
+                                        (click)="selectExciseProductType(item)">-
                                         {{item}}
                                     </div>
                                 </div>
+                                <div class="header">พิกัดสินค้านำเข้า</div>
                             </div>
                         </div>
+
                     </div>
-                    <div class="thirteen wide column">
+
+
+
+                    <div id="divDataTable" class="thirteen wide column">
                         <div class="ui active inverted dimmer" *ngIf="onLoading">
                             <div class="ui medium text loader">กำลังโหลด...</div>
                         </div>
@@ -207,23 +219,28 @@
                             <table id="userManagementDt" class="ui small celled table aligned hover nowrap" style="width: 150%">
                                 <thead id="trDrinamic">
                                     <tr>
-                                        <th rowspan="2" style="text-align: center !important">ทะเบียนสรรพสามิต เดิม/ใหม่</th>
-                                        <th rowspan="2" style="text-align: center !important" >ชื่อผู้ประกอบการ</th>
+                                        <th rowspan="2" style="text-align: center !important">ทะเบียนสรรพสามิต
+                                            เดิม/ใหม่</th>
+                                        <th rowspan="2" style="text-align: center !important">ชื่อผู้ประกอบการ</th>
                                         <th rowspan="2" style="text-align: center !important">ชื่อโรงอุตสาหกรรม/สถานบริการ</th>
                                         <th rowspan="2" style="text-align: center !important">พื้นที่</th>
-                                        <th colspan="2" style="text-align: center !important">การชำระภาษีในสภาวะปกติ (บาท)</th>
+                                        <th colspan="2" style="text-align: center !important">การชำระภาษีในสภาวะปกติ
+                                            (บาท)</th>
                                         <th rowspan="2" style="text-align: center !important">เปลี่ยนแปลง (ร้อยละ)</th>
                                         <th rowspan="2" style="text-align: center !important">ชำระภาษี(เดือน)</th>
-                                        <th colspan="3" style="text-align: center !important">การตรวจสอบภาษีย้อนหลัง 3 ปีงบประมาณ</th>
+                                        <th colspan="3" style="text-align: center !important">การตรวจสอบภาษีย้อนหลัง 3
+                                            ปีงบประมาณ</th>
                                         <th rowspan="2" style="text-align: center !important">ภาค</th>
                                         <th rowspan="2" style="text-align: center !important">พิกัด</th>
                                         <th rowspan="2" style="text-align: center !important">ที่อยู่โรงอุตสาหกรรม/สถานบริการ</th>
                                         <th rowspan="2" style="text-align: center !important">ทุนจดทะเบียน</th>
                                         <th rowspan="2" style="text-align: center !important">สถานะ/วันที่</th>
-                                        <th colspan="12" style="text-align: center !important">การชำระภาษี {{ month/2 }}
+                                        <th colspan="12" style="text-align: center !important">การชำระภาษี {{ month/2
+                                            }}
                                             เดือนแรก
                                         </th>
-                                        <th colspan="12" style="text-align: center !important">การชำระภาษี {{ month/2 }}
+                                        <th colspan="12" style="text-align: center !important">การชำระภาษี {{ month/2
+                                            }}
                                             เดือนหลัง </th>
                                         <th rowspan="2" style="text-align: center !important">เพิ่มข้อมูลภายนอก</th>
                                     </tr>
