commit edit mockup

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-3/int01-3-2/int01-3-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-3/int01-3-2/int01-3-2.component.html
@@ -3,7 +3,7 @@
         <div class="ui ordered steps ">
             <div class="active step">
               <div class="content">
-                <div class=" title">ขั้นตอนที่ 1</div>
+                <div class="active title">ขั้นตอนที่ 1</div>
                 <div class="description">ตรวจสอบการรับเงินค่าปรับ<br>เปรียบเทียบคดี</div>
               </div>
             </div>
@@ -13,24 +13,7 @@
                 <div class="description">ตรวจสอบการรับ-ส่งเงินค่าปรับ<br>เปรียบเทียบคดี</div>
               </div>
             </div>
-            <div class=" step">
-                <div class="content">
-                  <div class="title">ขั้นตอนที่ 3</div>
-                  <div class="description">ตรวจสอบการบันทึกบัญชี<br>รายได้แผ่นดิน</div>
-                </div>
-              </div>
-              <div class=" step">
-                <div class="content">
-                  <div class="title">ขั้นตอนที่ 4</div>
-                  <div class="description">ตรวจสอบการบันทึกบัญชีเงินสินบน - รางวัล</div>
-                </div>
-              </div>
-            <div class=" step">
-              <div class="content">
-                <div class="title">ขั้นตอนที่ 5</div>
-                <div class="description">ตรวจสอบการเบิก -  จ่ายเงินสินบน -  รางวัล</div>
-              </div>
-            </div>
+            
           </div>
     <div class="sixteen wide column">
         <div class="ui segment">   
