แก้ไขชื่อเมนูตรวจสอบภายใน

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <a class="item " [routerLink]="[ '/int09/1'] " *ngIf="authService.renderByPage('int09/1')" routerLinkActive="active "
-                style="color: #000; ">ประมาณการค่าใช้จ่ายในการเดินทางไป</a>
+                style="color: #000; ">ประมาณการค่าใช้จ่ายในการเดินทางไปราชการ</a>
             <div class="ui dropdown item " *ngIf="authService.renderByPage('int01')">
                 <i class="dropdown icon "></i> ตรวจสอบรายได้
                 <div class="menu ">
@@ -92,8 +92,8 @@
                                 routerLinkActive="active ">ตรวจสอบสินทรัพย์แบบอัพโหลด</a>
                             <a class="item " [routerLink]="[ '/int05/3/1'] " *ngIf="authService.renderByPage('int05/3/1')"
                                 routerLinkActive="active ">ตรวจสอบสินทรัพย์แบบเพิ่มข้อมูล</a>
-                            <a class="item " [routerLink]="[ '/int05/3/2'] " *ngIf="authService.renderByPage('int05/3/2')"
-                                routerLinkActive="active ">ตรวจสอบข้อมูลสินทรัพย์</a>
+                            <!-- <a class="item " [routerLink]="[ '/int05/3/2'] " *ngIf="authService.renderByPage('int05/3/2')"
+                                routerLinkActive="active ">ตรวจสอบข้อมูลสินทรัพย์</a> -->
                             <a class="item " [routerLink]="[ '/int05/3/3'] " *ngIf="authService.renderByPage('int05/3/3')"
                                 routerLinkActive="active ">บันทึกข้อมูลสินทรัพย์</a>
 
@@ -169,11 +169,11 @@
 
                 </div>
             </div>
-            <a class="item " [routerLink]="[ '/int01/8/1'] " *ngIf="authService.renderByPage('int01/8/1')"
-                routerLinkActive="active " style="color: #000; ">ค้นหากระดาษทำการ</a>
+            <!-- <a class="item " [routerLink]="[ '/int01/8/1'] " *ngIf="authService.renderByPage('int01/8/1')"
+                routerLinkActive="active " style="color: #000; ">ค้นหากระดาษทำการ</a> -->
 
             <div class="ui simple dropdown item " *ngIf="authService.renderByPage('int11')">
-                <i class="dropdown icon "></i> ทะเบียนติดตามงาน
+                <i class="dropdown icon "></i> ทะเบียนคุมการติดตามงาน
                 <div class="menu ">
                     <a class="item " [routerLink]="[ '/int11/1'] " *ngIf="authService.renderByPage('int11/1')"
                         routerLinkActive="active ">ทะเบียนคุมการติดตามผลการตรวจสอบของโครงการ</a>
