IaFollowUpDepartment insert step3

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-1/int11-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-1/int11-1.component.html
@@ -1,4 +1,4 @@
-<!-- <app-breadcrumb [route]="breadcrumb"></app-breadcrumb> -->
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 
 <div class="ui grid">
 
