แก้งานพี่ต้อ ตรวจสอบภาษี

--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-full-trader/working-paper-1-full-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-full-trader/working-paper-1-full-trader.component.html
@@ -127,22 +127,23 @@
 
                 <div class="thirteen wide column" style="padding-top: 0">
                     <div style="overflow-x: scroll;overflow-y: hidden;padding-bottom: 14px;">
-                        <table id="userManagementDt" class="ui small celled table aligned hover striped selectable" style="width: 5000px;">
+                        <table id="userManagementDt" class="ui small celled table aligned hover striped selectable nowrap" style="width: 100%;">
                             <thead id="trDrinamic">
                                 <tr>
                                     <th rowspan="2" style="text-align: center !important">ลำดับ</th>
                                     <th rowspan="2" style="text-align: center !important">ทะเบียนสรรพสามิต เดิม/ใหม่</th>
                                     <th rowspan="2" style="text-align: center !important">ชื่อผู้ประกอบการ</th>
                                     <th rowspan="2" style="text-align: center !important">ชื่อโรงอุตสาหกรรม/สถานบริการ</th>
+                                    <th rowspan="2" style="text-align: center !important">ภาค</th>
                                     <th rowspan="2" style="text-align: center !important">พื้นที่</th>
                                     <th colspan="2" style="text-align: center !important">การชำระภาษีในสภาวะปกติ (บาท)</th>
                                     <th rowspan="2" style="text-align: center !important">เปลี่ยนแปลง (ร้อยละ)</th>
                                     <th rowspan="2" style="text-align: center !important">ชำระภาษี(เดือน)</th>
                                     <th colspan="3" style="text-align: center !important">การตรวจสอบภาษีย้อนหลัง 3 ปีงบประมาณ</th>
-                                    <th rowspan="2" style="text-align: center !important">ภาค</th>
+                                    
                                     <th rowspan="2" style="text-align: center !important">พิกัด</th>
                                     <th rowspan="2" style="text-align: center !important">ที่อยู่โรงอุตสาหกรรม/สถานบริการ</th>
-                                    <th rowspan="2" style="text-align: center !important">ทุนจดทะเบียน</th>
+                                    <th rowspan="2" style="text-align: center !important">สถานะล่าสุด</th>
                                     <th rowspan="2" style="text-align: center !important">สถานะ/วันที่</th>
                                     <th colspan="12" style="text-align: center !important">การชำระภาษี {{ month/2 }} เดือนแรก</th>
                                     <th colspan="12" style="text-align: center !important">การชำระภาษี {{ month/2 }} เดือนหลัง
