--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
@@ -223,17 +223,17 @@
                                             เดิม/ใหม่</th>
                                         <th rowspan="2" style="text-align: center !important">ชื่อผู้ประกอบการ</th>
                                         <th rowspan="2" style="text-align: center !important">ชื่อโรงอุตสาหกรรม/สถานบริการ</th>
+                                        <th rowspan="2" style="text-align: center !important">ภาค</th>
                                         <th rowspan="2" style="text-align: center !important">พื้นที่</th>
                                         <th colspan="2" style="text-align: center !important">การชำระภาษีในสภาวะปกติ
                                             (บาท)</th>
                                         <th rowspan="2" style="text-align: center !important">เปลี่ยนแปลง (ร้อยละ)</th>
                                         <th rowspan="2" style="text-align: center !important">ชำระภาษี(เดือน)</th>
                                         <th colspan="3" style="text-align: center !important">การตรวจสอบภาษีย้อนหลัง 3
-                                            ปีงบประมาณ</th>
-                                        <th rowspan="2" style="text-align: center !important">ภาค</th>
+                                            ปีงบประมาณ</th>                                        
                                         <th rowspan="2" style="text-align: center !important">พิกัด</th>
                                         <th rowspan="2" style="text-align: center !important">ที่อยู่โรงอุตสาหกรรม/สถานบริการ</th>
-                                        <th rowspan="2" style="text-align: center !important">ทุนจดทะเบียน</th>
+                                        <th rowspan="2" style="text-align: center !important">สถานะล่าสุด</th>
                                         <th rowspan="2" style="text-align: center !important">สถานะ/วันที่</th>
                                         <th colspan="12" style="text-align: center !important">การชำระภาษี {{ month/2
                                             }}
