--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-1/int11-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-1/int11-1.component.html
@@ -130,3 +130,29 @@
 
   </div>
 </div>
+
+<!-- modol close -->
+<div class="ui modal" id="modolClose">
+    <div class="header">
+      หมายเหตุปิดงาน
+    </div>
+    <div class="content scrolling">
+    <!-- row 1 -->
+    <div class="ui form">
+        <div class="field">
+          <textarea id="noteclosejob"></textarea>
+        </div>
+      </div>
+    </div>
+    <div class="actions">
+      <div class="ui primary button" (click)="onClicksavenote()">
+          <i class="save icon"></i>
+        บันทึก
+      </div>
+      <div class="ui icon deny button">
+        <i class="close icon"></i>
+        ยกเลิก
+      </div>
+    </div>
+  
+  </div>
