--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-1/int11-1-1/int11-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-1/int11-1-1/int11-1-1.component.html
@@ -1,5 +1,6 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 
+<!-- form search -->
 <div class="ui grid">
 
   <div class="sixteen wide column">
@@ -420,10 +421,6 @@
 
         <div class="ui center aligned grid">
           <div class="sixteen wide column">
-            <button class="ui mini primary button" (click)="closeJob()" *ngIf="showCloseJob">
-              <i class="edit outline icon"></i>
-              ปิดงาน
-            </button>
             <button class="ui mini blue button" (click)="saveData()">
               <i class="save icon"></i>
               บันทึก
@@ -445,3 +442,4 @@
 
   </div>
 </div>
+
